added leaflet for map

--- a/WeatherMusic-v2/package.json
+++ b/WeatherMusic-v2/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@rnbo/js": "^1.3.3",
+    "@types/geojson": "^7946.0.15",
+    "@types/leaflet": "^1.9.16",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
