--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@rnbo/js": "^1.3.3",
     "@types/geojson": "^7946.0.15",
     "leaflet": "^1.9.4",
+    "leaflet.heat": "^0.2.0",
     "react": "^19.0.0-rc.1",
     "react-dom": "^19.0.0-rc.1",
     "react-leaflet": "^5.0.0-rc.2"
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@types/leaflet": "^1.9.16",
+    "@types/leaflet.heat": "^0.2.4",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
